Add functionality to display related Applications from the last X months
A function `getLatestApplications` has been added to `ApplicationFormsService.cls` that returns a list of recent applications. The `ApplicationFormsController.cls` has been updated to expose this function. Additionally, the `applicationTree` component now includes links to the most recent applications in its output.

--- a/force-app/main/default/classes/ApplicationFormsController.cls
+++ b/force-app/main/default/classes/ApplicationFormsController.cls
@@ -83,6 +83,16 @@ public without sharing class ApplicationFormsController {
     }
 
     @AuraEnabled
+    public static List<Application__c> getLatesApplications(Id appId, Integer monthsOld) {
+        try {
+            List<Application__c> apps = ApplicationFormsService.getLatestApplications(appId, monthsOld);
+            return apps;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
     public static Id getCurrentUserAccountId() {
         try {
             Id usrId = ApplicationFormsService.getCurrentUserAccountId();
