Add multi-application tree view feature
A new feature has been introduced which provides a tree view for multi-applications. This includes calling a controller method to fetch all applications along with their related children and requests. CSS and necessary templates for the tree view have also been added to enhance user interface. A new method to fetch all applications marked as 'Ready for Decision' has been added to the ApplicationFormsService class.

--- a/force-app/main/default/classes/ApplicationFormsController.cls
+++ b/force-app/main/default/classes/ApplicationFormsController.cls
@@ -83,6 +83,16 @@ public without sharing class ApplicationFormsController {
     }
 
     @AuraEnabled
+    public static List<Application__c> getAllApplications() {
+        try {
+            List<Application__c> apps = ApplicationFormsService.getAllApplications();
+            return apps;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
     public static List<Application__c> getLatestApplications(Id appId, Integer monthsOld) {
         try {
             List<Application__c> apps = ApplicationFormsService.getLatestApplications(appId, monthsOld);
