added bulk update for applications service and controller method

--- a/force-app/main/default/classes/ApplicationFormsController.cls
+++ b/force-app/main/default/classes/ApplicationFormsController.cls
@@ -31,6 +31,16 @@ public without sharing class ApplicationFormsController {
     }
 
     @AuraEnabled
+    public static void updateApplicationsBulk(List<Application__c> forms) {
+        try {
+            List<Application__c> form1 = forms;
+            ApplicationFormsService.updateApplicationsBulk(form1);
+        } catch (Exception ex) {
+            throw new AuraHandledException(ex.getMessage());
+        }
+    }
+
+    @AuraEnabled
     public static Id createTemporary() {
         try {
             Id res;
