Update UI and improve readability in application
The changes include improving the readability in the application form. The CSS has been updated to make texts more readable and to give a better structure to the content. HTML adjustments have been done to improve the form filling process. The padding for elements has been updated to streamline the UI. Special attention has been given to enhancing the visual feedback for the user when filling the application form. Additionally, major improvements have been made related to the file upload feature to enhance the user experience.

--- a/force-app/main/default/classes/ApplicationFormsService.cls
+++ b/force-app/main/default/classes/ApplicationFormsService.cls
@@ -71,6 +71,8 @@ public inherited sharing class ApplicationFormsService {
                                 Id,
                                 Name,
                                 Barnet_ApplicationEntry__c,
+                                Barnet_ApplicationEntry__r.XC_Fornamn__c,
+                                Barnet_ApplicationEntry__r.XC_Efternamn__c,
                                 Kategori__c,
                                 Underkategori__c,
                                 Beviljat_V_rde_Presentkort_Kontanter__c,
