getApplication to return status for application
used for disableing button

--- a/force-app/main/default/classes/ApplicationFormsService.cls
+++ b/force-app/main/default/classes/ApplicationFormsService.cls
@@ -59,6 +59,7 @@ public inherited sharing class ApplicationFormsService {
                         XC_ArbetsplatsForening__c,
                         XC_ApprovedByCertifier__c,
                         XC_CertifierRejectionInfo__c,
+                        XC_Status__c,
                         (SELECT
                                 Id,
                                 Name,
