--- a/force-app/main/default/classes/ApplicationFormsService.cls
+++ b/force-app/main/default/classes/ApplicationFormsService.cls
@@ -198,17 +198,30 @@ public inherited sharing class ApplicationFormsService {
     }
 
     public static List<Contact> getApplicationContacts(String applicationId) {
-        Id lfID = [SELECT XC_LF__c FROM Application__c WHERE Id = :applicationId].XC_LF__c; 
+        return getApproversForCurrentUser();
+    }
+
+    //** Get current users Approvers*/
+    public static List<Contact> getApproversForCurrentUser() {
+        User currentUser = [SELECT Contact.AccountId, Contact.Account.Name FROM User WHERE Id = :UserInfo.getUserId()];
+        if (currentUser.ContactId != null) {
+            return getApproversForCurrentExperienceUser(currentUser);
+        } else {
+            return getApproversForCurrentNormalUser();
+        }
+    }
+
+    public static List<Contact> getApproversForCurrentExperienceUser(User currentUser) {
         List<npe5__Affiliation__c> affiliations = [
-                SELECT
-                        npe5__Contact__r.Name,
-                        npe5__Contact__r.Id
-                FROM
-                        npe5__Affiliation__c
-                WHERE
-                        npe5__Organization__c = :lfID
+            SELECT
+                npe5__Contact__r.Name,
+                npe5__Contact__r.Id
+            FROM
+                npe5__Affiliation__c
+            WHERE
+                npe5__Organization__c = :currentUser.Contact.AccountId
                 AND
-                        npe5__Status__c = :MEMBER_STATUS_CURRENT];
+                npe5__Status__c = :MEMBER_STATUS_CURRENT];
         Set<Contact> contacts = new Set<Contact>();
         for (npe5__Affiliation__c aff : affiliations) {
             contacts.add(aff.npe5__Contact__r);
@@ -216,24 +229,13 @@ public inherited sharing class ApplicationFormsService {
         return new List<Contact> (contacts);
     }
 
-    //** Get current users Approvers*/
-    public static List<Contact> getApproversForCurrentUser() {
-        User currentUser = [SELECT Contact.AccountId, Contact.Account.Name FROM User WHERE Id = :UserInfo.getUserId()];
-        List<npe5__Affiliation__c> affiliations = [
-                SELECT
-                        npe5__Contact__r.Name,
-                        npe5__Contact__r.Id
-                FROM
-                        npe5__Affiliation__c
-                WHERE
-                        npe5__Organization__c = :currentUser.Contact.AccountId
-                AND
-                        npe5__Status__c = :MEMBER_STATUS_CURRENT];
-        Set<Contact> contacts = new Set<Contact>();
-        for (npe5__Affiliation__c aff : affiliations) {
-            contacts.add(aff.npe5__Contact__r);
-        }
-        return new List<Contact> (contacts);
+    public static List<Contact> getApproversForCurrentNormalUser() {
+        List<Contact> contacts = new List<Contact>([
+            SELECT Id, Name
+            FROM Contact
+            WHERE Account.Name = 'RIKS'
+        ]);
+        return contacts;
     }
 
     public static List<Application__c> getLatestApplications(Id appId, Integer monthsOld) {
