Updates ApplicationFormService, Application, ApplicationTree
ApplicationFormService: Getting more fields for preselectedLF function. Application: Added new Text for Riks and deleting unused code (a flow has this functionallity already). applicationTree: Avslå button always visible as requested from customer

--- a/force-app/main/default/classes/ApplicationFormsService.cls
+++ b/force-app/main/default/classes/ApplicationFormsService.cls
@@ -516,6 +516,9 @@ public inherited sharing class ApplicationFormsService {
                         XC_CertifierRequired__c,
                         XC_CurrentApplicationDate__c,
                         XC_NextApplicationDate__c,
+                        XC_NextApplicationDate1__c,
+                        XC_NextApplicationDate2__c,
+                        L_pande_ans_kningsdatum__c,
                         Name
                 FROM
                         Account
