Add approved date setting for applications
Introduced a method to set the approved date on applications when their status changes to 'APPROVED', and clear it when reverted. Removed the email notification logic for approved applications and its corresponding test. Updated the API version from 56.0 to 60.0.

--- a/force-app/main/default/classes/ApplicationTriggerHandler.cls
+++ b/force-app/main/default/classes/ApplicationTriggerHandler.cls
@@ -12,6 +12,7 @@ public with sharing class ApplicationTriggerHandler extends TriggerHandler {
         ApplicationTriggerHelper.setStatuses(newList, oldMap);
         ApplicationTriggerHelper.setRecordType(newList);
         ApplicationTriggerHelper.setOwner(newList, oldMap);
+        ApplicationTriggerHelper.setApprovedDate(newList, oldMap);
     }
 
     public override void afterDelete() {
