Add clear row functionality to application trees
Implemented a new feature to clear specific rows in the applicationTree and multiApplicationTree components by integrating a button that triggers the clearing of financial fields in the corresponding record. Introduced a server-side method `clearRow` to handle the update operation and ensure consistency across both frontend and backend procedures.

--- a/force-app/main/default/classes/ApplicationFormsController.cls
+++ b/force-app/main/default/classes/ApplicationFormsController.cls
@@ -112,6 +112,17 @@ public without sharing class ApplicationFormsController {
     }
 
     @AuraEnabled
+    public static Bidragsrader__c clearRow(String jsonData) {
+        Bidragsrader__c res;
+        try {
+            res = ApplicationFormsService.clearRow(jsonData);
+            return res;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
     public static List<Contact> getApproversForCurrentUser(){
         try {
             List<Contact> approvers = ApplicationFormsService.getApproversForCurrentUser();
